# Project-Argus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
.playwright-mcp/: page-2026-07-12T13-54-49-152Z.yml  page-2026-07-12T13-58-05-794Z.yml  page-2026-07-12T14-00-10-632Z.yml  page-2026-07-12T14-01-24-821Z.yml  page-2026-07-12T14-02-11-293Z.yml  page-2026-07-12T14-02-48-298Z.yml
backend/: __init__.py  activity.py  audit.py  briefing.py  briefing_api.py  cli.py  cli_usage.py  config.py  db.py  doctor.py  flashcards.py  flashcards_api.py  ingest_api.py  insights.py  journal.py  main.py  notes.py  notes_api.py  quick_links.py  quick_links_api.py  review_api.py  scheduler.py  search_api.py  suggestions.py  system_api.py  usage.py  writer.py
backend/agent/: __init__.py  generate.py  planner.py  runtime.py
backend/connectors/: __init__.py  gcal.py  todoist.py
backend/rag/: __init__.py  chunk.py  extract.py  index.py  paths.py  retrieve.py  watcher.py
backend/study/: __init__.py  api.py  corpus.py  grader.py  practice_exam.py  study_guide.py  syllabus.py
backend/tasks/: __init__.py  api.py  parser.py
claude-integration/: settings-hooks.snippet.json  setup.ps1
claude-integration/commands/: log-session.md
claude-integration/hooks/: session-end-journal.ps1  session-start-context.ps1
desktop/: .gitignore  README.md  argus-backend.spec  electron-builder.yml  main.js  package-lock.json  package.json  preload.js
desktop/backend/: argus_server.py
desktop/lib/: children.js  config.js  next-bootstrap.js  paths.js  prereqs.js  updater.js
desktop/onboarding/: index.html  wizard.css  wizard.js
desktop/scripts/: make-icon.mjs  stage.mjs
desktop/splash/: index.html
desktop/tests/: smoke_backend.py
docs/: ARGUS-REDESIGN-IMPLEMENTATION-JUL152026.md  BUILD_LOG.md  BUILD_STATE.md  HANDOFF-P4.md
docs/plans/: p0-foundation.md  p0.5-dev-journal.md  p1-rag-chat.md  p1.5-coursework.md  p2-tasks-calendar.md  p3-planner-approvals.md  p4-briefings-insights.md
tests/: test_activity.py  test_api.py  test_apply.py  test_audit.py  test_briefing.py  test_briefing_api.py  test_cli.py  test_cli_usage.py  test_config.py  test_db.py  test_doctor.py  test_flashcards.py  test_gcal.py  test_ingest_api.py  test_insights.py  test_journal.py  test_notes_api.py  test_quick_links.py  test_rag_extract_chunk.py  test_rag_index.py  test_rag_watcher.py  test_review_api.py  test_search_api.py  test_study.py  test_study_api.py  test_system_api.py  test_tasks.py  test_tasks_api.py  test_usage.py  test_writer.py  test_ws_chat.py
vault-template/: Welcome.md
vault-template/30-Areas/: assistant-preferences.md
web/: .gitignore  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
(+105 files in other folders)
