[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.1.0"
description = "Argus - a local, Jarvis-style second brain built on Obsidian"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-frontmatter>=1.1",
    "watchdog>=4.0",
    "keyring>=25.0",
    "claude-agent-sdk>=0.1",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
# Heavy RAG stack - installed at Phase P1 (`pip install -e .[rag]`).
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2",
    "pdfplumber>=0.11",
    "python-pptx>=0.6",
    "python-docx>=1.1",
]
# Google Calendar connector (`argus connect gcal`). backend/connectors/gcal.py
# imports these lazily and only once a token is actually stored, so the base
# app (and /api/agenda, /api/insights) works fully without this extra —
# installing it is only needed to run the one-time OAuth connect flow.
gcal = [
    "google-api-python-client>=2.100",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
argus = "backend.cli:main"

[tool.setuptools]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
